# DipWork

sport-team-analytics-app/: Dockerfile  app.py  docker-compose.yml  pyproject.toml
sport-team-analytics-app/helpers/: create_admin.py  create_random_player_data.py  create_test_match_stats.py  create_test_players.py
sport-team-analytics-app/migrations/versions/: ceed9c1a61bd_add_training_and_match_models.py
sport-team-analytics-app/src/controllers/: admin_controller.py  coach_controller.py  player_controller.py
sport-team-analytics-app/src/models/: init_db.py  models.py
sport-team-analytics-app/templates/: home.html  login.html  register.html
sport-team-analytics-app/templates/admin/: add_team.html  add_user.html  assign_team.html  dashboard.html  edit_team.html  edit_user.html
sport-team-analytics-app/templates/coach/: add_match.html  add_match_form.html  add_training.html  analytics.html  analytics_pdf.html  assign_players.html  coach_base.html  dashboard.html  edit_match.html  edit_match_form.html  edit_match_stats.html  edit_training.html  matches.html  player_detail_modal.html  players.html  team_detail_modal.html  teams.html  trainings.html
sport-team-analytics-app/templates/player/: dashboard.html
